[FIX] fix z index on the main navbar on mobile

--- a/css/modal.css
+++ b/css/modal.css
@@ -116,7 +116,7 @@ p {
   .topnav {
     padding-left: 20px;
     padding-right: 20px;
-    z-index: 2;
+    z-index: 3;
     position: fixed;
     width: 100%;
     margin: 0;
@@ -126,6 +126,9 @@ p {
   }
   .hero-content {
     margin-top: 70px;
+  }
+  .bground {
+    z-index: 0;
   }
 }
 
@@ -196,7 +199,7 @@ main {
 .bground {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   height: 100%;
